--- a/package.json
+++ b/package.json
@@ -2,8 +2,10 @@
   "name": "box-office",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://Sudip-epw.github.io/box-office-app",
   "dependencies": {
     "@tanstack/react-query": "^4.35.3",
+    "gh-pages": "^6.1.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-query": "^3.39.3",
@@ -29,7 +31,9 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier --write src/**/*.{js,jsx}"
+    "format": "prettier --write src/**/*.{js,jsx}",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build"
   },
   "eslintConfig": {
     "extends": [
